[tool.poetry]
name = "threaded-context"
version = "1.2.3"
description = "Basic context manager with inheritance management."
authors = ["François Schmidts <francois@schmidts.fr>"]
license = "GNU General Public License v3 (GPLv3)"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
