[project]
name = "threaded-context"
version = "1.3.0"
description = "Basic context manager with inheritance management."
authors = [{name = "François Schmidts", email = "francois@schmidts.fr"}]
license = "GPL-3.0-only"
requires-python = ">=3.9"
dependencies = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=9.0.3,<10", python = ">=3.10"}
pycodestyle = "^2.14.0"
black = {version = "^26.3.1", python = ">=3.10"}
flake8 = "^7.3.0"
pylint = {version = "^4.0.5", python = ">=3.10"}
mypy = {version = "^1.19.1", python = ">=3.9"}

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["tests.py", "test_*.py", "*_test.py"]

[tool.black]
line-length = 79
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
